# hpath

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG  HPath-IO-Errors.html  HPath-IO-Utils.html  HPath-IO.html  HPath.html  LICENSE  README.md  System-Posix-Directory-Foreign.html  System-Posix-Directory-Traversals.html  System-Posix-FD.html  System-Posix-FilePath.html  cabal.project  doc-index-60.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-J.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  doc-index-W.html  doc-index.html  doctests-hpath.hs  doctests-posix.hs  doctests.hs  (+15 more)
hpath/: CHANGELOG  LICENSE  README.md  hpath.cabal  run-doctests.sh
hpath-directory/: CHANGELOG.md  configure  configure.ac  hpath-directory.cabal
hpath-directory/src/: HsDirectoryConfig.h.in
hpath-directory/src/System/Directory/: AFP.hs  AbstractFilePath.hs  Errors.hs  HPath.hs  OsPath.hs  Types.hs
hpath-directory/src/System/Posix/: Foreign.hsc
hpath-directory/src/System/Posix/PosixFilePath/: Directory.hs  Directory.hs-boot
hpath-directory/src/System/Posix/PosixFilePath/Directory/: Errors.hs
hpath-directory/src/System/Posix/PosixPath/: Directory.hs  Directory.hs-boot
hpath-directory/src/System/Posix/PosixPath/Directory/: Errors.hs
hpath-directory/src/System/Posix/RawFilePath/: Directory.hs
hpath-directory/src/System/Posix/RawFilePath/Directory/: Errors.hs  Traversals.hs
hpath-directory/src/System/Win32/WindowsFilePath/: Directory.hsc
hpath-directory/src/System/Win32/WindowsPath/: Directory.hsc
hpath-directory/test/: Main.hs  Utils.hs
hpath-directory/test/System/Directory/AFP/: AppendFileSpec.hs  CanonicalizePathSpec.hs  CopyDirRecursiveCollectFailuresSpec.hs  CopyDirRecursiveOverwriteSpec.hs  CopyDirRecursiveSpec.hs  CopyFileOverwriteSpec.hs  CopyFileSpec.hs  CreateDirIfMissingSpec.hs  CreateDirRecursiveSpec.hs  CreateDirSpec.hs  CreateRegularFileSpec.hs  CreateSymlinkSpec.hs  DeleteDirRecursiveSpec.hs  DeleteDirSpec.hs  DeleteFileSpec.hs  GetDirsFilesSpec.hs  GetFileTypeSpec.hs  MoveFileOverwriteSpec.hs  MoveFileSpec.hs  ReadFileSpec.hs  RecreateSymlinkOverwriteSpec.hs  RecreateSymlinkSpec.hs  RenameFileSpec.hs  ToAbsSpec.hs  WriteFileLSpec.hs  WriteFileSpec.hs
hpath-directory/test/System/Directory/Posix/PosixFilePath/Directory/: GetFileTypeSpec.hs
hpath-directory/test/System/Posix/PosixFilePath/Directory/: AppendFileSpec.hs  CanonicalizePathSpec.hs  CopyDirRecursiveCollectFailuresSpec.hs  CopyDirRecursiveOverwriteSpec.hs  CopyDirRecursiveSpec.hs  CopyFileOverwriteSpec.hs  CopyFileSpec.hs  CreateDirIfMissingSpec.hs  CreateDirRecursiveSpec.hs  CreateDirSpec.hs  CreateRegularFileSpec.hs  CreateSymlinkSpec.hs  DeleteDirRecursiveSpec.hs  DeleteDirSpec.hs  DeleteFileSpec.hs  GetDirsFilesSpec.hs  GetFileTypeSpec.hs  MoveFileOverwriteSpec.hs  MoveFileSpec.hs  ReadFileSpec.hs  RecreateSymlinkOverwriteSpec.hs  RecreateSymlinkSpec.hs  RenameFileSpec.hs  ToAbsSpec.hs  WriteFileLSpec.hs  WriteFileSpec.hs
hpath-directory/test/System/Posix/RawFilePath/Directory/: CopyDirRecursiveCollectFailuresSpec.hs  CopyDirRecursiveOverwriteSpec.hs  CopyDirRecursiveSpec.hs  CreateDirRecursiveSpec.hs  DeleteFileSpec.hs  ReadFileSpec.hs
hpath-filepath/: CHANGELOG.md  README.md  hpath-filepath.cabal  run-doctests.sh
hpath-filepath/src/System/Posix/: FilePath.hs
hpath-io/: CHANGELOG.md  README.md  TODO.md  hpath-io.cabal
hpath-io/src/HPath/: IO.hs  IO.hs-boot
hpath-io/src/HPath/IO/: Errors.hs
hpath-io/src/Streamly/: ByteString.hs
hpath-io/src/Streamly/ByteString/: Lazy.hs
hpath-io/test/: Main.hs  Utils.hs
hpath-io/test/HPath/IO/: AppendFileSpec.hs  CopyDirRecursiveCollectFailuresSpec.hs  CopyDirRecursiveOverwriteSpec.hs  CopyDirRecursiveSpec.hs  CopyFileOverwriteSpec.hs  CreateDirIfMissingSpec.hs  CreateDirRecursiveSpec.hs  CreateDirSpec.hs  DeleteDirRecursiveSpec.hs  DeleteDirSpec.hs  DeleteFileSpec.hs  GetDirsFilesSpec.hs  MoveFileOverwriteSpec.hs  MoveFileSpec.hs  ReadFileEOFSpec.hs  ReadFileSpec.hs  RecreateSymlinkSpec.hs  ToAbsSpec.hs  WriteFileLSpec.hs  WriteFileSpec.hs
hpath-posix/: CHANGELOG.md  README.md  hpath-posix.cabal
hpath-posix/cbits/: dirutils.c  dirutils.h
hpath-posix/src/System/Posix/: FD.hs  Foreign.hsc
hpath-posix/src/System/Posix/PosixFilePath/Directory/: Traversals.hs
hpath-posix/src/System/Posix/RawFilePath/Directory/: Traversals.hs
hpath/src/: HPath.hs
hpath/src/HPath/: Internal.hs
src/: HPath-IO-Errors.html  HPath-IO-Utils.html  HPath-IO.html  HPath-Internal.html  HPath.IO.Errors.html  HPath.IO.html  HPath.Internal.html  HPath.hs  HPath.html  Path.hs  System-Posix-Directory-Foreign.html  System-Posix-Directory-Traversals.html  System-Posix-FD.html  System-Posix-FilePath.html  System.Posix.Directory.Foreign.html  System.Posix.Directory.Traversals.html  System.Posix.FD.html  System.Posix.FilePath.html
src/HPath/: Foreign.hsc  IO.hs  IO.hs-boot  Internal.hs
src/HPath/IO/: Errors.hs  Utils.hs
src/Path/: Internal.hs
src/System/Posix/: FD.hs  FilePath.hs
src/System/Posix/Directory/: Traversals.hs
streamly-posix/: cabal.project  streamly-posix.cabal
streamly-posix/test/: Main.hs
test/: Main.hs  Utils.hs
test/HPath/IO/: AppendFileSpec.hs  CanonicalizePathSpec.hs  CopyDirRecursiveCollectFailuresSpec.hs  CopyDirRecursiveOverwriteSpec.hs  CopyDirRecursiveSpec.hs  CopyFileOverwriteSpec.hs  CopyFileSpec.hs  CreateDirSpec.hs  CreateRegularFileSpec.hs  CreateSymlinkSpec.hs  DeleteDirRecursiveSpec.hs  DeleteDirSpec.hs  DeleteFileSpec.hs  GetDirsFilesSpec.hs  GetFileTypeSpec.hs  MoveFileOverwriteSpec.hs  MoveFileSpec.hs  ReadFileEOFSpec.hs  ReadFileSpec.hs  RecreateSymlinkOverwriteSpec.hs  RecreateSymlinkSpec.hs  RenameFileSpec.hs  WriteFileSpec.hs
unix/: unix.cabal
