name:                hpath
version:             0.5.8
synopsis:            Support for well-typed paths
description:         Support for will-typed paths.
license:             BSD3
license-file:        LICENSE
author:              Julian Ospald <hasufell@posteo.de>
maintainer:          Julian Ospald <hasufell@posteo.de>
copyright:           2015–2016 FP Complete, Julian Ospald 2016
category:            Filesystem
build-type:          Simple
cabal-version:       >=1.8
extra-source-files:  README.md, CHANGELOG

library
  hs-source-dirs:    src/
  ghc-options:       -Wall -O2
  exposed-modules:   HPath, HPath.Foreign, HPath.Internal
  build-depends:     base >= 4 && <5
                   , bytestring
                   , exceptions
                   , deepseq

test-suite test
    type: exitcode-stdio-1.0
    main-is: Main.hs
    hs-source-dirs: test
    build-depends: HUnit
                 , base
                 , hspec
                 , mtl
                 , hpath

source-repository head
    type:     git
    location: https://github.com/hasufell/hpath
