name:                hpath
version:             0.5.8
synopsis:            Support for well-typed paths
description:         Support for will-typed paths.
license:             BSD3
license-file:        LICENSE
author:              Julian Ospald <hasufell@posteo.de>
maintainer:          Julian Ospald <hasufell@posteo.de>
copyright:           2015–2016 FP Complete, Julian Ospald 2016
category:            Filesystem
build-type:          Simple
cabal-version:       >=1.8
extra-source-files:  README.md, CHANGELOG

library
  hs-source-dirs:    src/
  ghc-options:       -Wall -O2
  exposed-modules:   HPath, HPath.Internal
  build-depends:     base >= 4 && <5
                   , HUnit
                   , bytestring
                   , deepseq
                   , exceptions
                   , hspec
                   , posix-paths
                   , utf8-string
                   , word8


test-suite doctests
  type:              exitcode-stdio-1.0
  ghc-options:       -threaded
  main-is:           doctests.hs
  build-depends:     base
                   , HUnit
                   , bytestring
                   , doctest >= 0.8
                   , hpath
                   , posix-paths

source-repository head
  type:     git
  location: https://github.com/hasufell/hpath

