name:                hpath
version:             0.5.8
synopsis:            Support for well-typed paths
description:         Support for will-typed paths.
license:             BSD3
license-file:        LICENSE
author:              Julian Ospald <hasufell@posteo.de>
maintainer:          Julian Ospald <hasufell@posteo.de>
copyright:           2015–2016 FP Complete, Julian Ospald 2016
category:            Filesystem
build-type:          Simple
cabal-version:       >=1.14
extra-source-files:  README.md
                     CHANGELOG
                     cbits/dirutils.h
                     doctests.hs
                     benchmarks/*.hs

library
  hs-source-dirs:    src/
  default-language:  Haskell2010
  ghc-options:       -Wall -O2
  c-sources:         cbits/dirutils.c
  exposed-modules:   HPath,
                     HPath.Internal,
                     System.Posix.Directory.Foreign,
                     System.Posix.Directory.Traversals,
                     System.Posix.FilePath
  build-depends:     base >= 4.2 && <5
                   , bytestring >= 0.9.2.0
                   , deepseq
                   , exceptions
                   , hspec
                   , unix >= 2.5
                   , utf8-string
                   , word8


test-suite doctests-hpath
  default-language:  Haskell2010
  type:              exitcode-stdio-1.0
  ghc-options:       -threaded
  main-is:           doctests-hpath.hs
  build-depends:     base
                   , HUnit
                   , QuickCheck
                   , doctest >= 0.8
                   , hpath

test-suite doctests-posix
  default-language:  Haskell2010
  type:              exitcode-stdio-1.0
  ghc-options:       -threaded
  main-is:           doctests-posix.hs
  build-depends:     base,
                     bytestring,
                     unix,
                     hpath,
                     doctest >= 0.8,
                     HUnit,
                     QuickCheck

benchmark bench.hs
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: benchmarks
  main-is:        Bench.hs

  build-depends:
      base,
      hpath,
      bytestring,
      unix,
      directory  >= 1.1 && < 1.3,
      filepath   >= 1.2 && < 1.4,
      process    >= 1.0 && < 1.3,
      criterion  >= 0.6 && < 0.9
  ghc-options: -O2

source-repository head
  type:     git
  location: https://github.com/hasufell/hpath

