cabal-version:       >=1.10

name:                hpath-directory
version:             0.15.2.2
synopsis:            Alternative to 'directory' package with AbstractFilePath based filepaths
description:         This provides a safer alternative to the 'directory'
                     package.

                     For a more high-level version of this with
                     proper Path type, use 'hpath-io', which makes
                     use of this package.
homepage:            https://github.com/hasufell/hpath
bug-reports:         https://github.com/hasufell/hpath/issues
license:             BSD3
license-file:        LICENSE
author:              Julian Ospald <hasufell@posteo.de>
maintainer:          Julian Ospald <hasufell@posteo.de>
copyright:           Julian Ospald <hasufell@posteo.de> 2020
category:            Filesystem
build-type:          Simple
extra-source-files:  CHANGELOG.md
                     ./src/System/Directory/AFP.hs
tested-with:         GHC==7.10.3
                   , GHC==8.0.2
                   , GHC==8.2.2
                   , GHC==8.4.4
                   , GHC==8.6.5
                   , GHC==8.8.1

library
  if os(windows)
    cpp-options:       -DWINDOWS
  exposed-modules:     System.Directory.AFP
                       System.Directory.Types
                       System.Posix.PosixFilePath.Directory
                       System.Posix.PosixFilePath.Directory.Errors
  -- other-modules:
  -- other-extensions:
  build-depends:         base                >= 4.8  && <5
                       , IfElse
                       , abstract-filepath
                       , abstract-filepath-types
                       , abstract-filepath-unix
                       , bytestring          >= 0.10
                       , exceptions          >= 0.10
                       , hpath-posix         >= 0.14.0
                       , safe-exceptions     >= 0.1
                       , streamly            >= 0.7
                       , streamly-bytestring >= 0.1.2
                       , streamly-posix      >= 0.1.0.2
                       , time                >= 1.8
                       , transformers
                       , unix                >= 2.5
                       , unix-bytestring     >= 0.3
                       , utf8-string
  if impl(ghc < 8.0)
    build-depends:
        fail >= 4.9

  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions: PackageImports
  GHC-Options:          -Wall

test-suite spec
  if os(windows)
    cpp-options:       -DWINDOWS
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       test
  Main-Is:              Main.hs
  other-modules:
                        System.Posix.PosixFilePath.Directory.AppendFileSpec
                        System.Posix.PosixFilePath.Directory.CanonicalizePathSpec
                        System.Posix.PosixFilePath.Directory.CopyDirRecursiveCollectFailuresSpec
                        System.Posix.PosixFilePath.Directory.CopyDirRecursiveOverwriteSpec
                        System.Posix.PosixFilePath.Directory.CopyDirRecursiveSpec
                        System.Posix.PosixFilePath.Directory.CopyFileOverwriteSpec
                        System.Posix.PosixFilePath.Directory.CopyFileSpec
                        System.Posix.PosixFilePath.Directory.CreateDirIfMissingSpec
                        System.Posix.PosixFilePath.Directory.CreateDirRecursiveSpec
                        System.Posix.PosixFilePath.Directory.CreateDirSpec
                        System.Posix.PosixFilePath.Directory.CreateRegularFileSpec
                        System.Posix.PosixFilePath.Directory.CreateSymlinkSpec
                        System.Posix.PosixFilePath.Directory.DeleteDirRecursiveSpec
                        System.Posix.PosixFilePath.Directory.DeleteDirSpec
                        System.Posix.PosixFilePath.Directory.DeleteFileSpec
                        System.Posix.PosixFilePath.Directory.GetDirsFilesSpec
                        System.Posix.PosixFilePath.Directory.GetFileTypeSpec
                        System.Posix.PosixFilePath.Directory.MoveFileOverwriteSpec
                        System.Posix.PosixFilePath.Directory.MoveFileSpec
                        System.Posix.PosixFilePath.Directory.ReadFileSpec
                        System.Posix.PosixFilePath.Directory.RecreateSymlinkOverwriteSpec
                        System.Posix.PosixFilePath.Directory.RecreateSymlinkSpec
                        System.Posix.PosixFilePath.Directory.RenameFileSpec
                        System.Posix.PosixFilePath.Directory.ToAbsSpec
                        System.Posix.PosixFilePath.Directory.WriteFileLSpec
                        System.Posix.PosixFilePath.Directory.WriteFileSpec
                        Spec
                        Utils
  GHC-Options:          -Wall
  Build-Depends:        abstract-filepath
                      , abstract-filepath-unix
                      , base
                      , HUnit
                      , IfElse
                      , bytestring >= 0.10.0.0
                      , hpath-directory
                      , hpath-filepath >= 0.10
                      , hpath-posix    >= 0.13
                      , hspec >= 1.3
                      , process
                      , time >= 1.8
                      , unix
                      , unix-bytestring
                      , utf8-string
  build-tool-depends: hspec-discover:hspec-discover
  default-extensions: PackageImports

source-repository head
  type:     git
  location: https://github.com/hasufell/hpath
