cabal-version:      >=1.10
name:               hpath-directory
version:            0.15.2.2
synopsis:
  Alternative to 'directory' package with AbstractFilePath based filepaths

description:
  This provides a safer alternative to the 'directory'
  package.
  For a more high-level version of this with
  proper Path type, use 'hpath-io', which makes
  use of this package.

homepage:           https://github.com/hasufell/hpath
bug-reports:        https://github.com/hasufell/hpath/issues
license:            BSD3
license-file:       LICENSE
author:             Julian Ospald <hasufell@posteo.de>
maintainer:         Julian Ospald <hasufell@posteo.de>
copyright:          Julian Ospald <hasufell@posteo.de> 2020
category:           Filesystem
build-type:         Configure
extra-tmp-files:
  autom4te.cache
  config.log
  config.status
  src/HsDirectoryConfig.h

extra-source-files:
  ./src/HsDirectoryConfig.h.in
  ./src/System/Directory/AFP.hs
  ./src/System/Win32/WindowsFilePath/*.h
  CHANGELOG.md

tested-with:
  GHC ==7.10.3 || ==8.0.2 || ==8.2.2 || ==8.4.4 || ==8.6.5 || ==8.8.1

library
  if os(windows)
    cpp-options:     -DWINDOWS
    exposed-modules: System.Win32.WindowsFilePath.Directory
    build-depends:
        Win32

    include-dirs:    src

  else
    exposed-modules:
      System.Posix.PosixFilePath.Directory
      System.Posix.PosixFilePath.Directory.Errors

    build-depends:
        hpath-posix             >=0.14.0
      , streamly-posix          >=0.1.0.2
      , unix                    >=2.8
      , unix-bytestring         >=0.3

  exposed-modules:
    System.Directory.AFP
    System.Directory.Errors
    System.Directory.Types

  -- other-modules:
  -- other-extensions:
  build-depends:
      base                     >=4.8   && <5
    , bytestring               >=0.10
    , exceptions               >=0.10
    , filepath                 >=2.0.0.0
    , IfElse
    , safe-exceptions          >=0.1
    , split
    , streamly                 >=0.7
    , streamly-bytestring      >=0.1.2
    , time                     >=1.8
    , transformers
    , utf8-string

  if impl(ghc <8.0)
    build-depends: fail >=4.9

  hs-source-dirs:     src
  default-language:   Haskell2010
  default-extensions: PackageImports
  ghc-options:        -Wall

test-suite spec
  if os(windows)
    cpp-options: -DWINDOWS

  type:               exitcode-stdio-1.0
  default-language:   Haskell2010
  hs-source-dirs:     test
  main-is:            Main.hs
  other-modules:
    Spec
    System.Directory.AFP.AppendFileSpec
    System.Directory.AFP.CanonicalizePathSpec
    System.Directory.AFP.CopyDirRecursiveCollectFailuresSpec
    System.Directory.AFP.CopyDirRecursiveOverwriteSpec
    System.Directory.AFP.CopyDirRecursiveSpec
    System.Directory.AFP.CopyFileOverwriteSpec
    System.Directory.AFP.CopyFileSpec
    System.Directory.AFP.CreateDirIfMissingSpec
    System.Directory.AFP.CreateDirRecursiveSpec
    System.Directory.AFP.CreateDirSpec
    System.Directory.AFP.CreateRegularFileSpec
    System.Directory.AFP.CreateSymlinkSpec
    System.Directory.AFP.DeleteDirRecursiveSpec
    System.Directory.AFP.DeleteDirSpec
    System.Directory.AFP.DeleteFileSpec
    System.Directory.AFP.GetDirsFilesSpec
    System.Directory.AFP.MoveFileOverwriteSpec
    System.Directory.AFP.MoveFileSpec
    System.Directory.AFP.ReadFileSpec
    System.Directory.AFP.RecreateSymlinkOverwriteSpec
    System.Directory.AFP.RecreateSymlinkSpec
    System.Directory.AFP.RenameFileSpec
    System.Directory.AFP.ToAbsSpec
    System.Directory.AFP.WriteFileLSpec
    System.Directory.AFP.WriteFileSpec
    System.Directory.Posix.PosixFilePath.Directory.GetFileTypeSpec
    Utils

  ghc-options:        -Wall

  if os(windows)
    cpp-options:   -DWINDOWS
    build-depends:
        Win32                   >=2.13.2.0

  else
    build-depends:
        hpath-posix             >=0.13
      , unix                    >=2.8
      , unix-bytestring

  build-depends:
      filepath                 >=2.0.0.0
    , base
    , bytestring               >=0.10.0.0
    , hpath-directory
    , hspec                    >=1.3
    , HUnit
    , IfElse
    , process
    , time                     >=1.8
    , utf8-string

  build-tool-depends: hspec-discover:hspec-discover -any
  default-extensions: PackageImports

source-repository head
  type:     git
  location: https://github.com/hasufell/hpath
